--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "googleapis": "^164.1.0",
-    "puppeteer": "^24.26.1"
+    "puppeteer": "^24.26.1",
+    "xlsx": "^0.18.5"
   }
 }
